@@ -9,23 +9,23 @@ DIST qt-everywhere-opensource-src-4.8.1.tar.gz 239606696 RMD160 538e626fae80ca8c
 EBUILD qt-demo-4.6.3.ebuild 1392 RMD160 12f3048645a077a57b72622206365f2160540a7c SHA1 01e4fab512bfe81b580369245c516df006b912d0 SHA256 af3773a455877de99ef9c988db77457ae4716d5ed6b4bb474218c7e9be613830
 EBUILD qt-demo-4.7.2.ebuild 1591 RMD160 baa823ffbf43275fda630a1cfd3e64ccedbc2057 SHA1 88e2382439fdc6dbcf8827352438f6c01c3804f0 SHA256 44110434bc72160dfbac9d72f16682d321e109774d78709da9c28236c035c177
 EBUILD qt-demo-4.7.4.ebuild 1598 RMD160 5fe178e211a126562fe692a2bae54b6290b1dfbb SHA1 6c655ddd34960c9ebbb26e6b9b75705fd83a941d SHA256 56680004cbe07118417c08e330e41bf24691b32469b24ff1c7a0ec3c165947df
-EBUILD qt-demo-4.8.1-r1.ebuild 3004 RMD160 edad5d001f47fc4658fbcfbee82df6a89bce659a SHA1 77f348ecfaef7983648ec22d3cc4072f79ec2983 SHA256 bb57cf503376c3fac93466b0f3bfce472eb7cab37a9fa7cdbd1842389c912a1d
-MISC ChangeLog 10667 RMD160 6db55a964a16cdfa82529feb4546c964c3c149d6 SHA1 0ddd4fc1e170aa1d949b946bbca47ea0f70cd771 SHA256 df69b47d3991eb248fdcfd0948f820945131851f83e8cb293f0a39db7ce72f73
+EBUILD qt-demo-4.8.1-r1.ebuild 3015 RMD160 76dda52e2332ca43361e727e139d1e4ffb46738b SHA1 8a3cb9465a0c5beae85d34f3ddc6ff390cf3d93e SHA256 68498870859fc913ccf5bfb5ecc8d64518d65f5971bce02d0bdb7686e7ee391b
+MISC ChangeLog 10752 RMD160 7f407ca7834d1340d04e1ad48791c84471582951 SHA1 147d4abee98c290aeb5e34d7398e969c823796c2 SHA256 1f3a7fcc5f1f12e7d58530e17e0e2a4416fe43643552f378acfe130f67c7c322
 MISC metadata.xml 975 RMD160 a84dbce34d0597bb08169fda0bc4c415f053e613 SHA1 35dbfdb9cd4c7cb9999b1057b34103051e611858 SHA256 c4e9cb33b7fbc20a1bcdeb81d6c0f35647b3e2423d032d7de49f464d4073b5f3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPqWUPAAoJEPqDWhW0r/LC/pIP/2Eiof8/9RgD9xlQE09nvYxV
-fVTOn/bC7aPAB3CNsFnBWN9mPSiXiLR7eHG8sluxhkGO0VEsuKWZR4qKizJgNgYU
-ww2P9lx0NRB+5uASi0CfYBHFrDc8K5SMv9+uLxDfqKjwyv3P9D4JVsg+2AoezZy/
-oIp+d7bbsayNNZXR92XfFixMhSWqt4O0PffhLc1yJRvlvyrNoUvjZVkHSWYP373h
-UiNMn7C1dwKyrIUMLefbAkLnQ/DvItL15aBwzh/W9CBt4iyCTpI1JJvuQjUficvm
-lISe7i2jaUl5CSvgrMxC86OrsmrQ+cnLELDa57BetKrJ93jktuRW0EqEU9AMIrk3
-F9pjZaTzvMHWSjoX9fC0kHcHhg3+g+pZV59WNL7cVYZIJI47srm86odedDWPgvMq
-WaYsFLU32jOf8pjAnHHUi24utV/WdHFBC0qSMHbYLB9YLJXIi4/15Dy9FZfZR2kg
-MjpFGDySvMEpB7z/hpzQxWPZRliVtXLV2RPY+pdmqN6wCrUNhKUzRZas/pAMrzKF
-5531lHnmG1ALsvvXOppxFio6BpwbY/udDVSWkuLXPrqmwTAoC1/2kNRSXBvNJlBi
-94iaRXfbaVS8+8r8/R086/VGDFrJM9H72vLNIPwDvixwZhU+lGHapn2aS7QFB7G3
-9eDy+F0E3L++9wTiTILH
-=R8j+
+iQIcBAEBCgAGBQJPrjCuAAoJENXLsxwXqFxyjIYP+gIJxPYwtyaHrEJ0nzeRxNBj
+3iVCX7pbKc1lO+lov5AZKNVEAYDnuWSMtfvct0O0y6QDpW6+cY67RomJLxQsNzju
+XoYcFGOmjIZM+W1DH94eEe6HkOAHOHwKwuu8muz2+lD8bz32XQfEp/BH/kpyd5dL
+Z8l3eVP2sA80rTzPW3lSFBZ7AmkcZ/pphFlqT9NbTcpt8dbFysZh0s7qSkUTB9VR
+4N4MTljtrd9CgdjvPzA7MITzpHVkSA+p7KLLg+Gwil8nZCNh1ZokE5lFxwTBUFpT
+hR1AsoG5/yusiedDWPXohj8vsHH6bHKgsZnUbvyHa36tWBPiqWkwYAk3BhZMU4XP
+sCMr6PoPuitIqN8JqRyGnYpEYhzBLZ919XJhA21KrQlY8OHEkyzO7xhAEbgkaHKp
+EN4sa1a5BuyWYi0+fYNhCqiOhPO+obUbXrq+D2ll2tLPP3GQE2SVsCBHBFUz2BEH
+TXD7c1mItqGzK/HuegFQPSFCpb3ShsNkSg1MkN9TBj8aw8end9i7OCnOq/HC/uN0
+/gTVnbrDTka+kZIp46AXJnJpAsqKDbH0xgRF+4DDAOJnOayT+s9BHYOue9PepERj
+hCjfpBfBf3ZhaoVI8dCuxN1UkWR7gteOt3LT1z8IuOt/33P8aTkwr3tOcjTj4MRs
+ks4F1SOQ18fdG25R1jUt
+=fnC7
 -----END PGP SIGNATURE-----
